# llmzoomcamp

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
01-agentic-rag/code_openai/: agents.py  ingest.py  notebook.py  persistent_rag.py  rag_helper.py  sqlite_ingest.py
01-agentic-rag/homework/: 01_homework.py
