[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmzoomcamp"
version = "0.1.0"
description = ""
authors = [
    { name = "Elizabeth H. Camp", email = "betsy.h.camp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
    "jupytext",
    "mdformat",
    "mdformat-gfm",
    "pytest-cov",]

[tool.hatch.build.targets.wheel]
packages = ["src/llmzoomcamp"]

[tool.ruff]
line-length = 88
target-version = "py314"
extend-exclude = ["*.md", ".venv", "notebooks"]

[tool.ruff.lint]
select = [
    "E4",  # import/syntax-related pycodestyle errors
    "E7",  # statement-level pycodestyle errors
    "E9",  # runtime errors (syntax errors at parse time)
    "F",   # pyflakes — undefined names, unused imports
    "I",   # isort — ruff format does not sort imports
    "UP",  # pyupgrade — modern Python syntax for 3.11+
    "B",   # flake8-bugbear — common design bugs, mutable defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["llmzoomcamp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == "__main__"',
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
    "assert_never",
    "raise AssertionError",
]

[tool.coverage.html]
directory = "htmlcov"
